icon alignment issue fix

--- a/agile-frontend/WebContent/flatfull/css/material-theme/css/agile-theme.css
+++ b/agile-frontend/WebContent/flatfull/css/material-theme/css/agile-theme.css
@@ -214,7 +214,7 @@ form select.form-control{
 .agile-new-theme .btn-addon.btn-sm i
 {
       margin: 0px;
-      vertical-align: middle; 
+      vertical-align: baseline; 
       display:inline;
       background-color: rgba(0,0,0,0.0);;
 }
@@ -749,7 +749,7 @@ header .bg-white a, header button.show-search-dropdown {
 {
   font-size: 14px;
   padding-right:0px;
-  margin-top:0px;
+  /*margin-top:0px;*/
 }     
 .icon-plus-sign
 {
